# PCLite

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  application.cpp  application.h  main.cpp  vcpkg.json
.github/workflows/: release.yml
Tests/: CMakeLists.txt
Tests/converter/: CMakeLists.txt  test_attribute_handler.cpp  test_attributes.cpp  test_concurrent_writer.cpp  test_converter.cpp  test_las_reader.cpp  test_octree_naming.cpp  test_sampler.cpp
Tests/project/: CMakeLists.txt  project_manager_test.cpp
Tests/viewer/integration/: test_converter_viewer_integration.cpp  test_point_cloud_loader.cpp
Tests/viewer/unit/: test_arcball_controller.cpp  test_measurement_manager.cpp  test_node_manager.cpp  test_orbit_camera.cpp  test_sse_lru_strategy.cpp
cmake/: googletest.cmake  utils.cmake
src/converter/: CMakeLists.txt
src/converter/src/: attributes.h  chunker.cpp  chunker.h  concurrent_writer.cpp  concurrent_writer.h  converter.cpp  converter.h  converter_options.h  hierarchy_builder.cpp  hierarchy_builder.h  indexer.cpp  indexer.h  octree_naming.cpp  octree_naming.h  sampler.cpp  sampler.h
src/converter/src/attribute_handler/: attribute_codec.cpp  attribute_codec.h  attribute_handler.h  attribute_handler_registry.cpp  attribute_handler_registry.h  classification_attribute_handler.cpp  classification_attribute_handler.h  position_attribute_handler.cpp  position_attribute_handler.h  rgb_attribute_handler.cpp  rgb_attribute_handler.h  scalar_attribute_handler.cpp  scalar_attribute_handler.h
src/converter/src/attribute_reader/: attribute_reader.cpp  attribute_reader.h  las_reader.cpp  las_reader.h  pcd_reader.cpp  pcd_reader.h
src/converter/tests/: CMakeLists.txt  mock_attribute_reader.cpp  mock_attribute_reader.h  test_attributes.cpp  test_chunker.cpp  test_converter.cpp  test_hierarchy_builder.cpp  test_indexer.cpp  test_sampler.cpp
src/core/: CMakeLists.txt  attributes.cpp  attributes.h  boundary_box.cpp  boundary_box.h  bounding_box.cpp  bounding_box.h  kdtree.cpp  kdtree.h  mat.h  node.cpp  node.h  object.h  pc_node.h  plane_fit.cpp  plane_fit.h  vec3.cpp  vec3.h  version.h
src/project/: CMakeLists.txt  app_paths.cpp  app_paths.h  project_manager.cpp  project_manager.h
src/ui/: window.h
src/utilities/: CMakeLists.txt  pclite_thread_pool.cpp  pclite_thread_pool.h
src/viewer/: CMakeLists.txt
src/viewer/camera/: arcball_controller.cpp  arcball_controller.h  camera.cpp  camera.h  camera_controller.h  camera_ray.cpp  camera_ray.h  first_person_controller.cpp  first_person_controller.h  orbit_camera.cpp  orbit_camera.h  orbit_controller.cpp  orbit_controller.h  perspective_camera.cpp  perspective_camera.h  turntable_controller.cpp  turntable_controller.h
src/viewer/layer/: layer.cpp  layer.h  point_cloud_layer.cpp  point_cloud_layer.h
src/viewer/measurement/: angle_measurement.cpp  angle_measurement.h  angle_measurement_display.cpp  angle_measurement_display.h  distance_measurement.cpp  distance_measurement.h  distance_measurement_display.cpp  distance_measurement_display.h  measurement.h  measurement_display.h  measurement_manager.cpp  measurement_manager.h  measurement_math.h
src/viewer/node_loader/: file_node_loader.cpp  file_node_loader.h  node.h  node_loader.h  point_cloud_loader.cpp  point_cloud_loader.h  point_layout.h
src/viewer/node_management/: all_nodes_strategy.cpp  all_nodes_strategy.h  manage_strategy.cpp  manage_strategy.h  node_manager.cpp  node_manager.h  sse_lru_strategy.cpp  sse_lru_strategy.h
src/viewer/painter/: axis_painter.cpp  axis_painter.h  bounding_box_painter.cpp  bounding_box_painter.h  measurement_painter.cpp  measurement_painter.h  node_painter.cpp  node_painter.h  painter.h  plane_fit_ring_painter.cpp  plane_fit_ring_painter.h  rotation_center_painter.cpp  rotation_center_painter.h  shader.cpp  shader.h
src/viewer/tests/: CMakeLists.txt
src/viewer/tests/unit/: test_all_nodes_strategy.cpp  test_angle_measurement.cpp  test_camera_ray.cpp  test_distance_measurement.cpp  test_node_manager.cpp  test_orbit_camera.cpp
src/viewer/window/: file_browser_panel.cpp  file_browser_panel.h  gl_fbo.cpp  gl_fbo.h  main_window.cpp  main_window.h  project_hub_panel.cpp  project_hub_panel.h  sdl_window.cpp  sdl_window.h  viewport.cpp  viewport.h  window.cpp  window.h
test_data/: sample.las
tools/: generate_sample_las.py  pcl_viewer.cpp  s3dis_to_las.py
